# aoc-solution-cli

./: LICENSE  README.md  aoc_solution_cli.py  pyproject.toml
aoc_solution_cli/: __init__.py  aocgen.py  aocrun.py  recent_problem_saver.py
aoc_solution_cli_helpers/: aocgen.py  recent_problem_saver.py
