[tool.poetry]
name = "aoc-solution-cli"
version = "0.1.0"
description = "Basic system for making a cli for your aoc solutions"
authors = ["taitep <arvid@h.se>"]
readme = "README.md"
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
