[tool.poetry]
name = "aoc-solution-cli"
version = "1.0.0"
description = "CLI for handling AoC solutions"
authors = ["taitep <arvid@h.se>"]
readme = "README.md"
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
advent-of-code-data = "^2.0.1"

[tool.poetry.scripts]
aocgen = "aoc_solution_cli.aocgen:aocgen"
aocrun = "aoc_solution_cli.aocrun:aocrun"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
